# spr26-Team-1

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.workspace.ts
.github/ISSUE_TEMPLATE/: course-assignment.md  documentation-or-wiki-update.md  enhancement.md  feature.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  db.py  main.py  models.py  pipeline.py  schemas.py  services.py  storage.py  validators.py
apps/api/app/routes/: __init__.py  artifacts.py  jobs.py  scenes.py
apps/api/tests/: conftest.py  test_api_routes.py  test_openapi.py
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: client-layout.tsx  globals.css  layout.tsx  not-found.tsx  page.test.tsx  page.tsx
apps/web/components/: nav.test.tsx  nav.tsx  scene-viewer-toggle.tsx  scene-viewer.test.tsx  scene-viewer.tsx  splat-viewer.tsx
apps/web/lib/: api.test.ts  api.ts  utils.test.ts  utils.ts
apps/web/test/: helpers.tsx  mocks.ts  setup.ts
fleet_api/: admin.py  config.py  db.py  main.py  models.py  schemas.py  security.py  storage.py
scripts/: bootstrap_api_env.sh
storage-layer/: Makefile  storage.cpp
storage-layer/lib/: socket_bridge.h  socket_nal.h  video_ingestor.hpp
storage-layer/tests/: read-av-packets.py  spoof-srt.py
topolog_sdk/: .gitignore  package.xml  sdk_test.py  setup.cfg  setup.py
topolog_sdk/examples/: config.yaml  multi_camera.py  single_camera.py
topolog_sdk/topolog_sdk/: __init__.py  cli.py  config.py  encoder.py  pipeline.py  pixel_formats.py  streamer.py
(+4 files in other folders)
